--- a/examples/with-history/package.json
+++ b/examples/with-history/package.json
@@ -3,15 +3,15 @@
   "version": "0.6.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=\"--inspect -r dotenv/config\" keystone-next dev",
-    "start": "keystone-next start",
-    "build": "keystone-next build"
+    "dev": "cross-env NODE_OPTIONS=\"--inspect -r dotenv/config\" keystone dev",
+    "start": "keystone start",
+    "build": "keystone build"
   },
   "dependencies": {
-    "@k6-contrib/list-plugins": "^0.6.0",
-    "@keystone-next/auth": "^35.0.0",
-    "@keystone-next/fields-document": "^12.0.0",
-    "@keystone-next/keystone": "^27.0.1",
+    "@k6-contrib/list-plugins": "^1.0.0",
+    "@keystone-6/auth": "^1.0.0",
+    "@keystone-6/fields-document": "^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "typescript": "^4.4.4"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/with-tracking"
