--- a/packages/history/package.json
+++ b/packages/history/package.json
@@ -11,10 +11,10 @@
     "@babel/runtime": "^7.15.3"
   },
   "peerDependencies": {
-    "@keystone-next/keystone": ">=^27.0.1"
+    "@keystone-6/core": "^1.0.0"
   },
   "devDependencies": {
-    "@keystone-next/keystone": "^27.0.1",
+    "@keystone-6/core": "^1.0.0",
     "typescript": "^4.4.4"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/list-plugins"
