--- a/packages/kilt-auth/package.json
+++ b/packages/kilt-auth/package.json
@@ -31,7 +31,7 @@
     "@polkadot/util-crypto": "^8.2.2",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
-    "envy": "^2.0.0",
+    "dotenv": "^10.0.0",
     "graphql": "^15.8.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/kilt-auth"
