--- a/packages/kilt-auth/package.json
+++ b/packages/kilt-auth/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@keystone-6/core": "^1.0.1",
+    "next": "^12.0.7",
     "react": "^17.0.2"
   },
   "peerDependencies": {
