--- a/packages/fields-bigint/package.json
+++ b/packages/fields-bigint/package.json
@@ -11,13 +11,14 @@
     "@keystone-ui/fields": "^6.0.0"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "react": "^17.0.2"
   },
   "devDependencies": {
     "@keystone-6/core": "^1.0.0",
     "@types/react": "^17.0.35",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": "^12.20 || >= 14.13"
