--- a/packages/fields-dimension/package.json
+++ b/packages/fields-dimension/package.json
@@ -24,14 +24,15 @@
     "@keystone-ui/segmented-control": "^6.0.0"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-dimension",
   "devDependencies": {
     "@keystone-6/core": "^1.0.0",
     "@types/react": "^17.0.35",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": "^12.20 || >= 14.13"
