--- a/packages/fields-encrypted/package.json
+++ b/packages/fields-encrypted/package.json
@@ -27,7 +27,7 @@
     "cryptr": "^6.0.2"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-encrypted",
@@ -35,7 +35,8 @@
     "@keystone-6/core": "^1.0.0",
     "@types/cryptr": "^4.0.1",
     "@types/react": "^17.0.35",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": "^12.20 || >= 14.13"
