--- a/packages/fields-weight/package.json
+++ b/packages/fields-weight/package.json
@@ -29,7 +29,7 @@
     "cuid": "^2.1.8"
   },
   "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
+    "@keystone-6/core": "^1.0.0",
     "react": "^17.0.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-weight",
@@ -39,7 +39,8 @@
     "@types/react": "^17.0.35",
     "graphql": "^15.7.2",
     "mime": "^2.5.2",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": "^12.20 || >= 14.13"
