--- a/examples/s3-images/package.json
+++ b/examples/s3-images/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.0",
     "graphql": "^15.8.0",
     "graphql-upload": "^13.0.0",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "typescript": "^4.4.4"
