--- a/packages/session/package.json
+++ b/packages/session/package.json
@@ -13,8 +13,7 @@
     "cookie": "^0.5.0"
   },
   "devDependencies": {
-    "@keystone-6/core": "^5.1.0",
-    "typescript": "~4.9.4"
+    "@keystone-6/core": "^5.3.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/session"
 }
