--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -13,23 +13,23 @@
     "@graphql-tools/schema": "^9.0.4",
     "@k6-contrib/fields-encrypted": "^5.0.0",
     "@k6-contrib/list-plugins": "^5.0.0",
-    "@keystone-6/auth": "^7.0.1",
-    "@keystone-6/core": "^5.3.2",
+    "@keystone-6/auth": "^8.0.0",
+    "@keystone-6/core": "^6.1.0",
     "@keystone-6/document-renderer": "^1.1.2",
-    "@keystone-6/fields-document": "^8.0.0",
+    "@keystone-6/fields-document": "^9.0.0",
     "@keystone-ui/core": "^5.0.2",
     "@keystone-ui/fields": "^7.2.0",
     "@keystone-ui/icons": "^6.0.2",
     "@keystone-ui/tooltip": "^6.0.2",
     "@preconstruct/next": "^4.0.0",
-    "@types/react": "^18.0.9",
+    "@types/react": "^18.3.0",
     "dotenv": "^16.0.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "~5.1.0"
+    "typescript": "^5.5.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/basic"
 }
