--- a/examples/dimension/package.json
+++ b/examples/dimension/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@k6-contrib/fields-dimension": "^5.0.0",
     "@k6-contrib/fields-weight": "^5.0.0",
-    "@keystone-6/core": "^5.3.2",
+    "@keystone-6/core": "^6.1.0",
     "dotenv": "^16.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "~5.1.0"
+    "typescript": "^5.5.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/dimension"
 }
