--- a/examples/s3-images/package.json
+++ b/examples/s3-images/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@k6-contrib/fields-s3-images": "^5.0.0",
-    "@keystone-6/core": "^5.3.2",
+    "@keystone-6/core": "^6.1.0",
     "dotenv": "^16.0.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.8.1",
     "graphql-upload": "^15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "~5.1.0"
+    "typescript": "^5.5.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/s3-images"
 }
