--- a/examples/with-tracking/package.json
+++ b/examples/with-tracking/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@k6-contrib/list-plugins": "^5.0.0",
-    "@keystone-6/auth": "^7.0.1",
-    "@keystone-6/core": "^5.3.2",
-    "@keystone-6/fields-document": "^8.0.0",
+    "@keystone-6/auth": "^8.0.0",
+    "@keystone-6/core": "^6.1.0",
+    "@keystone-6/fields-document": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "~5.1.0"
+    "typescript": "^5.5.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/with-tracking"
 }
