--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "@babel/preset-react": "^7.18.0",
     "@babel/preset-typescript": "^7.21.0",
     "@babel/runtime": "^7.16.3",
-    "@changesets/cli": "^2.18.0",
+    "@changesets/cli": "^2.27.7",
     "@manypkg/cli": "0.21.0",
     "@preconstruct/cli": "^2.8.1",
     "@types/jest": "^29.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
-    "prettier": "^2.5.0",
+    "fp-ts": "^2.16.8",
+    "prettier": "^3.3.3",
     "rimraf": "^3.0.2",
-    "typescript": "~5.1.0"
+    "typescript": "^5.5.0"
   },
   "prettier": {
     "proseWrap": "preserve",
@@ -57,5 +58,6 @@
       "packages/*"
     ],
     "distFilenameStrategy": "unscoped-package-name"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
