--- a/packages/fields-s3/package.json
+++ b/packages/fields-s3/package.json
@@ -4,6 +4,7 @@
   "version": "6.1.1",
   "author": "The KeystoneJS Contrib Development Team",
   "license": "MIT",
+  "deprecated": true,
   "main": "dist/fields-s3.cjs.js",
   "module": "dist/fields-s3.esm.js",
   "files": [
@@ -18,6 +19,8 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.685.0",
+    "@aws-sdk/lib-storage": "^3.685.0",
     "@babel/runtime": "^7.16.3",
     "@keystone-ui/button": "^7.0.2",
     "@keystone-ui/core": "^5.0.2",
