--- a/package.json
+++ b/package.json
@@ -25,27 +25,6 @@
       "examples/*"
     ]
   },
-  "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.21.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/preset-react": "^7.18.0",
-    "@babel/preset-typescript": "^7.21.0",
-    "@babel/runtime": "^7.16.3",
-    "@changesets/cli": "^2.27.7",
-    "@manypkg/cli": "0.21.4",
-    "@preconstruct/cli": "^2.8.7",
-    "@types/jest": "^29.0.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.0",
-    "fp-ts": "^2.16.8",
-    "prettier": "^3.3.3",
-    "rimraf": "^3.0.2",
-    "typescript": "^5.5.0"
-  },
   "prettier": {
     "proseWrap": "preserve",
     "singleQuote": true,
@@ -59,5 +38,26 @@
     ],
     "distFilenameStrategy": "unscoped-package-name"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.3.1",
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
+    "@changesets/cli": "^2.27.10",
+    "@manypkg/cli": "0.23.0",
+    "@preconstruct/cli": "^2.8.10",
+    "@types/jest": "^29.5.14",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "fp-ts": "^2.16.8",
+    "prettier": "^3.4.2",
+    "rimraf": "^3.0.2",
+    "typescript": "^5.7.2"
+  }
 }
