--- a/packages/fields-s3images/package.json
+++ b/packages/fields-s3images/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.714.0",
     "@babel/runtime": "^7.26.0",
     "@keystone-ui/button": "^7.0.2",
     "@keystone-ui/core": "^5.0.2",
