--- a/packages/fields-s3/package.json
+++ b/packages/fields-s3/package.json
@@ -19,8 +19,8 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.714.0",
-    "@aws-sdk/lib-storage": "^3.714.0",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/lib-storage": "^3.717.0",
     "@babel/runtime": "^7.26.0",
     "@keystone-ui/button": "^7.0.2",
     "@keystone-ui/core": "^5.0.2",
@@ -40,14 +40,14 @@
   "peerDependencies": {
     "@keystone-6/core": "^6.3.1",
     "graphql-upload": "^15.0.2",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react": "^18.1.0 || ^19.0.0",
+    "react-dom": "^18.1.0 || ^19.0.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-s3",
   "devDependencies": {
     "@keystone-6/core": "^6.3.1",
     "@types/bytes": "^3.1.5",
-    "@types/react": "^19.0.1",
+    "@types/react": "^19.0.0",
     "graphql": "^16.8.1",
     "graphql-upload": "^15.0.2",
     "mime": "^3.0.0",
