--- a/packages/fields-dimension/package.json
+++ b/packages/fields-dimension/package.json
@@ -17,21 +17,22 @@
     ]
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.3",
+    "@babel/runtime": "^7.26.0",
     "@keystone-ui/core": "^5.0.2",
     "@keystone-ui/fields": "^7.2.0",
     "@keystone-ui/pill": "^7.0.2",
     "@keystone-ui/segmented-control": "^7.0.3"
   },
   "peerDependencies": {
-    "@keystone-6/core": "^6.2.0",
-    "react": "^18.3.0"
+    "@keystone-6/core": "^6.3.1",
+    "react": "^18.1.0 || ^19.0.0",
+    "react-dom": "^18.1.0 || ^19.0.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-dimension",
   "devDependencies": {
-    "@keystone-6/core": "^6.2.0",
-    "@types/react": "^18.3.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "@keystone-6/core": "^6.3.1",
+    "@types/react": "^19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
