--- a/packages/fields-s3images/package.json
+++ b/packages/fields-s3images/package.json
@@ -17,36 +17,39 @@
     ]
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.3",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/lib-storage": "^3.717.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
+    "@babel/runtime": "^7.26.0",
     "@keystone-ui/button": "^7.0.2",
     "@keystone-ui/core": "^5.0.2",
     "@keystone-ui/fields": "^7.2.0",
     "@keystone-ui/pill": "^7.0.2",
     "@keystone-ui/toast": "^6.0.2",
-    "aws-sdk": "^2.1672.0",
-    "bytes": "^3.1.0",
-    "copy-to-clipboard": "^3.3.1",
+    "bytes": "^3.1.2",
+    "copy-to-clipboard": "^3.3.3",
     "cuid": "^2.1.8",
-    "fs-extra": "^11.0.0",
-    "sharp": "^0.33.4",
+    "fs-extra": "^11.2.0",
+    "sharp": "^0.33.5",
     "url-join": "^4.0.1"
   },
   "peerDependencies": {
-    "@keystone-6/core": "^6.2.0",
+    "@keystone-6/core": "^6.3.1",
     "graphql-upload": "^15.0.2",
-    "react": "^18.3.0"
+    "react": "^18.1.0 || ^19.0.0",
+    "react-dom": "^18.1.0 || ^19.0.0"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/packages/fields-s3images",
   "devDependencies": {
-    "@keystone-6/core": "^6.2.0",
-    "@types/bytes": "^3.1.4",
-    "@types/react": "^18.3.0",
+    "@keystone-6/core": "^6.3.1",
+    "@types/bytes": "^3.1.5",
+    "@types/react": "^19.0.0",
     "@types/sharp": "^0.32.0",
-    "@types/url-join": "^4.0.1",
+    "@types/url-join": "^4.0.3",
     "graphql": "^16.8.1",
     "graphql-upload": "^15.0.2",
     "mime": "^3.0.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
