--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
+    "@editorjs/quote": "^2.7.6",
     "@graphql-tools/schema": "^9.0.19",
     "@k6-contrib/fields-editorjs": "workspace:^",
     "@k6-contrib/fields-encrypted": "^6.2.0",
