--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,7 +10,17 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/image": "^2.10.1",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/nested-list": "^1.4.3",
     "@editorjs/quote": "^2.7.6",
+    "@editorjs/simple-image": "^1.6.0",
+    "@editorjs/table": "^2.4.3",
+    "@editorjs/warning": "^1.4.1",
     "@graphql-tools/schema": "^9.0.19",
     "@k6-contrib/fields-editorjs": "workspace:^",
     "@k6-contrib/fields-encrypted": "^6.2.0",
@@ -26,11 +36,16 @@
     "@preconstruct/next": "^4.0.0",
     "@types/react": "^19.0.0",
     "dotenv": "^16.4.7",
+    "editorjs-alert": "^1.1.4",
+    "editorjs-toggle-block": "^0.3.16",
+    "formidable": "^3.5.2",
     "graphql": "^16.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "title-editorjs": "^1.0.2"
   },
   "devDependencies": {
+    "@types/formidable": "^3",
     "typescript": "^5.7.2"
   },
   "repository": "https://github.com/keystonejs-contrib/k6-contrib/tree/master/examples/basic"
