--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.27.6",
     "@graphql-tools/schema": "^9.0.19",
+    "@k6-contrib/fields-editorjs": "workspace:^",
     "@k6-contrib/fields-encrypted": "^7.0.0",
     "@k6-contrib/list-plugins": "^7.0.0",
     "@keystone-6/auth": "^8.1.0",
